--- a/config_sample.env
+++ b/config_sample.env
@@ -1,29 +1,27 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "8184254664:AAGhoNUjcUJEbFS1UDaHSQjV_iELhSw8bo8"                              # Require restart after changing it while bot running
+OWNER_ID = "5296584067"                               # Require restart after changing it while bot running
+TELEGRAM_API = "26254064"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "72541d6610ae7730e6135af9423b319c"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://abidabdullahown7:abidabdullah1425@cluster0.7lgug.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "5296584067 -1002419772817"                       # Require restart after changing it while bot running
+SUDO_USERS = "5296584067 -1002419772817"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
 INCOMPLETE_TASK_NOTIFIER = "False"
-SET_COMMANDS = "False"
+SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
 FSUB_IDS = ""
-BOT_PM = ""
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = ""
@@ -58,10 +56,10 @@ UPGRADE_PACKAGES = ""
 
 # Leech & Mirror
 LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = "False"
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-CAP_FONT = "code"
+CAP_FONT = "bold"
 LEECH_FILENAME_PREFIX = ""
 LEECH_FILENAME_SUFFIX = ""
 LEECH_FILENAME_CAPTION = ""
@@ -88,7 +86,7 @@ QUEUE_UPLOAD = ""
 
 # RSS
 RSS_DELAY = "600"
-RSS_CHAT = ""
+RSS_CHAT = "-1002197279542"
 
 # Mega
 MEGA_EMAIL = ""
@@ -119,7 +117,7 @@ MDL_TEMPLATE = ""
 # Telegraph
 TITLE_NAME = "WZ-M/L-X"
 AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+AUTHOR_URL = "https://t.me/VJ_Botz"
 COVER_IMAGE = ""
 
 # Extra
@@ -127,7 +125,7 @@ SAFE_MODE = ""
 DELETE_LINKS = ""
 CLEAN_LOG_MSG = ""
 SHOW_EXTRA_CMDS = ""
-TIMEZONE = "Asia/Kolkata"
+TIMEZONE = "Asia/Dhaka"
 IMAGES = ""
 IMG_SEARCH = ""
 IMG_PAGE = ""
@@ -135,7 +133,7 @@ BOT_THEME = "minimal"
 EXCEP_CHATS = ""
 
 # M/L Buttons
-SCREENSHOTS_MODE = "False"
+SCREENSHOTS_MODE = "True"
 SHOW_MEDIAINFO = "False"
 SAVE_MSG = "False"
 SOURCE_LINK = "False"
